// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-ltcs-billing-status-aggregate-card.vue should be rendered correctly 1`] = `
<div
  class="z-data-card-stub"
  title="介護給付費明細書の状態"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <div
    class="v-data-table v-data-table--dense theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <thead>
          <tr>
            <th
              class="text-start"
            >
          サービス提供年月
            </th>
            <th
              class="text-end"
            >
          入力中
            </th>
            <th
              class="text-end"
            >
          未確定
            </th>
            <th
              class="text-end"
            >
          確定済
            </th>
            <th
              class="text-end"
            >
          合計
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-start"
            >
              令和3年3月
            </td>
            <td
              class="text-end"
            >
              12
            </td>
            <td
              class="text-end"
            >
              5
            </td>
            <td
              class="text-end"
            >
              24
            </td>
            <td
              class="text-end"
            >
              41
            </td>
          </tr>
          <tr>
            <td
              class="text-start"
            >
              令和3年2月
            </td>
            <td
              class="text-end"
            >
              0
            </td>
            <td
              class="text-end"
            >
              0
            </td>
            <td
              class="text-end"
            >
              19
            </td>
            <td
              class="text-end"
            >
              19
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`z-ltcs-billing-status-aggregate-card.vue should be rendered correctly when it is not have statements 1`] = `
<div
  class="z-data-card-stub"
  title="介護給付費明細書の状態"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <div
    class="v-data-table v-data-table--dense theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <thead>
          <tr>
            <th
              class="text-start"
            >
          サービス提供年月
            </th>
            <th
              class="text-end"
            >
          入力中
            </th>
            <th
              class="text-end"
            >
          未確定
            </th>
            <th
              class="text-end"
            >
          確定済
            </th>
            <th
              class="text-end"
            >
          合計
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              class="pt-2 text-center"
              colspan="5"
            >
              データがありません
            </th>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;
